force-app/main/default/objects/AI_Analysis_Log__c/AI_Analysis_Log__c.object-meta.xml
<CustomObject>
    <description>One row per meeting note sent to Gemini by AI Deal Intelligence: outcome, model, tokens, what changed on the Opportunity.</description>
    <label>AI Analysis Log</label>
    <nameField>
        <displayFormat>AIL-{000000}</displayFormat>
        <label>Log No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Analysis Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>