force-app/main/default/objects/AI_Analysis_Log__c/fields/Changes__c.field-meta.xml
<CustomField>
    <fullName>Changes__c</fullName>
    <description>Opportunity fields this meeting changed, one per line: field = new value.</description>
    <label>Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>