force-app/main/default/objects/AI_Analysis_Log__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Errors and warnings (values skipped, cut or bounded).</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>