force-app/main/default/objects/AI_Analysis_Log__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>The meeting note (Event) that was analysed. Text, because a lookup to Event is not possible.</description>
    <label>Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>