force-app/main/default/objects/AI_Analysis_Log__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>The JSON text Gemini returned, or the HTTP error body.</description>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>